# demo

./: CMakeLists.txt  README.md  makefile  test.c
example/: test.c
src/: CMakeLists.txt  demo.c  demo.h  demo_color.h  demo_error.c  demo_error.h  demo_mem.c  demo_mem.h  demo_web.c  demo_web.h
src/include/: demo.h  demo_error.h  demo_mem.h
test/: CMakeLists.txt  test.c
